# rust-crud

./: Cargo.toml  README.md
src/: controller.rs  main.rs  model.rs  user_service.rs
